# palemachine

./: .env.example  .gitignore  Cargo.toml  README.md  bambam_morigatsu_chuapo  bambam_morigatsu_chuapo.sh  config.toml  config.toml.example  downloader  history_of_download.sqlite  manage.py  start.sh  update.sh
.github/workflows/: release.yml
installation_scripts/: build.sh  python_script.sh
package/: .env  .rustc_info.json  bambam_morigatsu_chuapo.sh  config.toml  downloader
package/pages/: root.html
packaging/aur/: .SRCINFO  PKGBUILD  palemachine.service  palemachine.sysusers  palemachine.tmpfiles
packaging/nix/: flake.nix
pages/: login.html  root.html  settings.html
palemachine/: Downloader.py  asgi.py  settings.py  urls.py  views.py  wsgi.py
palemachine/templates/: download_form.html  manualdl_result.html
src/: db_link.rs  download.rs  main.rs
