[package]
name = "palemachine"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
awc = "3"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.0", features=["blocking", "json"]}
rusqlite = "0.31"
chrono = "0.4.41"
base64 = "0.22"
toml = "0.9.7"
dotenvy = "0.15"